# online-shop

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-rs  Makefile  README.md  auth.py  docker-compose-dev.yml  docker-compose.yml  init.sql  main.py  main_rs.py  uwsgi.ini
.sqlx/: query-0e4da89b2aff47a6b8bf7d5db174f281eb00e7017c908de28abecd2c05f9da68.json  query-1ef3c7208366ff2d491b959c1084d40246541e93b18c3d5947d15059dde7d3bf.json  query-40d25164376c8577010a534eb70f8870a68dade09e44eff33b65b3d29f78afc8.json  query-43c6d3704aa233b165f1f095d4191accf65a53da736bcdbde86582ae9b527504.json  query-58d3df0048d4bbb9a32393a4251d4fe03896a3bb0e485494f834212f99f7b173.json  query-7d9edaba3dab2a8b5420354abb61f4cc5f38b86017a6dce0156f0080fff1dcf9.json  query-8a6344a8f94502b90d0a7c1bf8e55d8fca436bc54fa67c164608cb8048cc296a.json  query-8b2490a2062b547de39e2e2a4b4bfc4ed0fa401735896ba9f75b548830a8b7f5.json  query-dec394983a5bf35768aa1fca50c44606e74858dec60c513ea5256b33033e3acc.json
cargo_cache/cache/index.crates.io-6f17d22bba15001f/: actix-files-0.6.5.crate  actix-http-3.6.0.crate  actix-router-0.5.2.crate  actix-rt-2.9.0.crate  actix-server-2.3.0.crate  actix-web-4.5.1.crate  actix-web-codegen-4.2.2.crate  ahash-0.8.9.crate  async-channel-2.2.0.crate  async-io-2.3.1.crate  async-lock-3.3.0.crate  async-task-4.7.0.crate  cc-1.0.86.crate  event-listener-5.2.0.crate  event-listener-strategy-0.5.0.crate  pest-2.7.7.crate  (+10 more)
conf/: my.cnf  online-shop-rs.conf  online-shop.conf
src/: main.rs  model.rs
static/css/: basket.css  cart.css  catalog.css  footer.css  header.css  home.css  login.css  product.css
static/js/: cart.js  index.js  search.js
templates/: cart.html  catalog.html  connect.html  home.html  index.html  login.html  product.html
(+74 files in other folders)
